네이버 검색엔진 등록

--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "6fbf373a98589a4674311ac205ed658dbc13b751"
 yandex_site_verification :
 baidu_site_verification  :
 
