--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
     url: /tags/
     
 docs:
-  - title: "대목차"
+  - title: "Contents"
     children:
       - title: "Category"
         url: /categories/
