--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "Data Science"
+title                    : "Citizen Data Scientist"
 title_separator          : "|"
 subtitle                 : "samll positive action"
 name                     : "Jongheon Kim"
