포스트 업로드

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ docs:
       - title: "머신러닝(Machine Learning)"
         url: https://cysics.github.io/categories/#머신러닝
       - title: "시계열 분석(Time Series)"
-        url: https://cysics.github.io/categories/#시계열 분석
+        url: https://cysics.github.io/categories/#시계열-분석
       - title: "텍스트 마이닝(Text Mining)"
         url: https://cysics.github.io/categories/#텍스트-마이닝
       - title: "Category"
