--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "ko-KR"
 title                    : "Citizen Data Scientist"
 title_separator          : "|"
-subtitle                 : "samll positive action"
+subtitle                 : "small positive action"
 name                     : "Jongheon Kim"
 description              : "Data Analytics for Life"
 url                      : "https://cysics.github.io"
